@@ -1,3 +1,11 @@
+2013-04-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* support/regression/tests/literalop.c,
+	  support/regression/tests/bitwise.c: Fix host regression failues on
+	  64-bit PowerPC
+	* support/regression/tests/align.c: do not include stdalign.h on
+	  hosts that do not support it
+
 2013-04-06 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
